fixed mobile flickering

--- a/src/style.css
+++ b/src/style.css
@@ -1,15 +1,19 @@
 :root {
-  --primary-color: rgba(158, 255, 237, 1)
+  --primary-color: rgba(158, 255, 237, 1);
 }
 
-:root {
-  --primary-color: rgba(158, 255, 237, 1)
+html,
+body {
+  background: #111;
+  margin: 0;
+  padding: 0;
+  overscroll-behavior: none;
+  width: 100%;
+  height: 100%;
 }
 
 * {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
 }
 
 @font-face {
